--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="title">press a key to Start</h1>
+    <button id = "start-button" type="button" > start </button>
     <div>
         <div class="row">
             <div id="one" class="btn one">
