--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>siimon</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="simon.css">
 </head>
 <body>
-    <h1 id="title">press a key to Start</h1>
-    <button id = "start-button" type="button" > start </button>
+    <h1 id="title">Press a key to Start </h1>
+      
+        <button id = "start-button" type="button" > start </button>
+   
     <div>
         <div class="row">
             <div id="one" class="btn one">
